<resources>
    <string name="app_name">City Care Service</string>
    <string name="terms_text">By tapping \"Next\" you agree to Terms and Conditions and Privacy Policy</string>

    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>

    <string name="something_went_wrong">Something went wrong</string>
    <string name="check_internet_connection">Check your Internet Connection</string>
    <string name="under_development">Under Development</string>

    <string name="play_console_link">https://play.google.com/store/apps/details?id=</string>
    <string name="partner_apk_package">com.ludo.king</string>
    <string name="welcome_to_city_care_service_text">Welcome to City Care Service</string>
    <string name="let_s_get_started_text">Let\'s get Started</string>
    <string name="first_name_text">First Name</string>
    <string name="last_name_text">Last Name</string>
    <string name="next_text">Next</string>
    <string name="service_address_text">Service Address</string>
    <string name="change_text">change</string>
    <string name="select_date_of_service_text">Select Date of Service</string>
    <string name="your_service_will_take_approx_45_mins_text">Your Service will take approx. 45 mins.</string>
    <string name="time_to_start_the_service_text">Time to start the service</string>
    <string name="book_now_text">Book Now</string>
    <string name="edit_profile_text">Edit Profile</string>
    <string name="full_name_text">Full Name</string>
    <string name="email_address_text">Email Address</string>
    <string name="phone_number_text">Phone Number</string>
    <string name="update_now_text">Update Now</string>
    <string name="give_feedback_text">Give Feedback</string>
    <string name="enter_your_phone_number_text">Enter your Phone Number</string>
    <string name="_91_text">+91</string>
    <string name="enter_otp_text">Enter Otp</string>
    <string name="resend_otp_after_14_second_text">Resend Otp after 14 second</string>
    <string name="manage_addresses_text">Manage Addresses</string>
    <string name="details_text">Details</string>
    <string name="all_services_text">All Services</string>
    <string name="related_services_text">Related Services</string>
    <string name="reviews_text">Reviews</string>
    <string name="starting_from_text">Starting from</string>
    <string name="support_text">Support</string>
    <string name="house_flat_number_text">House/Flat Number*</string>
    <string name="landmark_optional_text">Landmark(Optional)</string>
    <string name="name_text">Name</string>
    <string name="save_address_text">Save Address</string>
    <string name="select_address_text">Select Address</string>
    <string name="booking_history_text">Booking History</string>
    <string name="search_for_a_service_text">Search for a Service</string>
    <string name="my_profile_text">My Profile</string>
    <string name="register_as_partner_text">Register As Partner</string>
    <string name="manage_address_text">Manage Address</string>
    <string name="scheduled_booking_text">Scheduled Booking</string>
    <string name="my_wallet_text">My Wallet</string>
    <string name="faq_text">FAQ</string>
    <string name="share_text">Share</string>
    <string name="feedback_text">Feedback</string>
    <string name="rate_us_text">Rate Us</string>
    <string name="logout_text">Logout</string>
    <string name="view_more_text">View More</string>
    <string name="review_text">Review :-</string>
</resources>