<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.authentication.EditProfileActivity">

    <TextView
        android:id="@+id/profile_tv"
        style="@style/tv.xtralarge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-2dp"
        android:background="@color/black"
        android:drawablePadding="@dimen/_8sdp"
        android:gravity="center_vertical"
        android:paddingVertical="@dimen/view_vertical_padding_normal"
        android:paddingStart="@dimen/activity_start_margin"
        android:text="@string/edit_profile_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/back_iv"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_iv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/ic_baseline_keyboard_backspace_24"
        app:layout_constraintBottom_toBottomOf="@id/profile_tv"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/profile_tv"
        app:tint="@color/white" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_tif"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_top_margin_x_large"
        android:hint="@string/full_name_text"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="@dimen/_4sdp"
        app:boxCornerRadiusBottomStart="@dimen/_4sdp"
        app:boxCornerRadiusTopEnd="@dimen/_4sdp"
        app:boxCornerRadiusTopStart="@dimen/_4sdp"
        app:endIconMode="clear_text"
        app:expandedHintEnabled="false"
        app:hintAnimationEnabled="false"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/profile_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_tef"
            style="@style/et.normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress|textCapWords"
            android:maxLines="1"
            tools:text="@tools:sample/full_names" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_tif"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_top_margin_x_large"
        android:hint="@string/email_address_text"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="@dimen/_4sdp"
        app:boxCornerRadiusBottomStart="@dimen/_4sdp"
        app:boxCornerRadiusTopEnd="@dimen/_4sdp"
        app:boxCornerRadiusTopStart="@dimen/_4sdp"
        app:endIconMode="clear_text"
        app:expandedHintEnabled="false"
        app:hintAnimationEnabled="false"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/name_tif">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/et.normal"
            android:id="@+id/email_tef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress|textCapWords"
            android:maxLines="1"
            tools:text="abc@gmail.com" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_tif"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_top_margin_x_large"
        android:clickable="false"
        android:enabled="false"
        android:hint="@string/phone_number_text"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="@dimen/_4sdp"
        app:boxCornerRadiusBottomStart="@dimen/_4sdp"
        app:boxCornerRadiusTopEnd="@dimen/_4sdp"
        app:boxCornerRadiusTopStart="@dimen/_4sdp"
        app:endIconMode="clear_text"
        app:expandedHintEnabled="false"
        app:hintAnimationEnabled="false"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/email_tif">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/et.normal"
            android:id="@+id/phone_tef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:enabled="false"
            android:inputType="textPhonetic"
            android:maxLines="1"
            tools:text="+91 9632587145" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/update_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_top_margin_x_large"
        android:paddingVertical="@dimen/view_vertical_padding_normal"
        android:text="@string/update_now_text"
        app:cornerRadius="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/phone_tif" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/activity_start_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/activity_end_margin" />

</androidx.constraintlayout.widget.ConstraintLayout>